--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,29 +1,9 @@
-:root {
-  font-family: "Vazir", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  line-height: 1.5;
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "./fonts.css";
+@import "./OTP.css";
 
-body {
-  margin: auto;
-  max-width: 1400px;
-  min-height: 100vh;
-  padding: 10px;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: inherit;
-  color: inherit;
-}
-
-button,
-input,
-select {
-  font-family: inherit;
+.left-direction {
+  direction: ltr;
 }
