category list file created

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 @import "tailwindcss/utilities";
 @import "./fonts.css";
 @import "./OTP.css";
+@import "./categoryForm.css";
 
 .left-direction {
   direction: ltr;
