--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,3 +8,12 @@
 .left-direction {
   direction: ltr;
 }
+
+td,
+th {
+  border: 2px solid gray;
+  padding: 10px;
+}
+th {
+  letter-spacing: 2px;
+}
